packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc721_consecutive_no_config.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc721_consecutive: ERC721ConsecutiveComponent::Storage,
    }
    use openzeppelin_token::erc721::extensions::ERC721ConsecutiveComponent;

    component!(
        path: ERC721ConsecutiveComponent,
        storage: erc721_consecutive,
        event: ERC721ConsecutiveEvent,
    );

    impl ERC721ConsecutiveInternalImpl = ERC721ConsecutiveComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC721ConsecutiveEvent: ERC721ConsecutiveComponent::Event,
    }
}


Diagnostics:

====
Warning: The ERC721Consecutive component requires an ImmutableConfig implementation in scope and
it looks like it is missing.

You can use the default implementation by importing it:

`use openzeppelin_token::erc721::extensions::DefaultConfig;`
========
Warning: The ERC721Consecutive component requires calling both
`self.erc721_consecutive.before_update(...)` in `ERC721HooksTrait::before_update`
and `self.erc721_consecutive.after_update(...)` in `ERC721HooksTrait::after_update`,
and it looks like one or both are missing.

This may lead to incorrect ownership or burn tracking for consecutively minted tokens.
====

AuxData:

None
