packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc721_consecutive_votes_no_hook_call.snap
---
source: src/tests/test_with_components.rs
expression: result
---
TokenStream:

#[starknet::contract]
pub mod MyToken {
    use openzeppelin_token::erc721::extensions::DefaultConfig;
    use openzeppelin_utils::cryptography::snip12::SNIP12Metadata;
    use starknet::ContractAddress;
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc721_consecutive: ERC721ConsecutiveComponent::Storage,
        #[substorage(v0)]
        pub votes: VotesComponent::Storage,
        #[substorage(v0)]
        pub nonces: NoncesComponent::Storage,
    }
    pub impl SNIP12MetadataImpl of SNIP12Metadata {
        fn name() -> felt252 {
            "DAPP_NAME"
        }
        fn version() -> felt252 {
            "DAPP_VERSION"
        }
    }
    fn wire_consecutive_hooks(
        ref self: ContractState, to: ContractAddress, token_id: u256, auth: ContractAddress,
    ) {
        self.erc721_consecutive.before_update(to, token_id, auth);
        self.erc721_consecutive.after_update(to, token_id, auth);
    }
    use openzeppelin_governance::votes::VotesComponent;
    use openzeppelin_token::erc721::extensions::ERC721ConsecutiveComponent;
    use openzeppelin_utils::nonces::NoncesComponent;

    component!(
        path: ERC721ConsecutiveComponent,
        storage: erc721_consecutive,
        event: ERC721ConsecutiveEvent,
    );
    component!(path: VotesComponent, storage: votes, event: VotesEvent);
    component!(path: NoncesComponent, storage: nonces, event: NoncesEvent);

    impl ERC721ConsecutiveInternalImpl = ERC721ConsecutiveComponent::InternalImpl<ContractState>;
    impl VotesInternalImpl = VotesComponent::InternalImpl<ContractState>;
    impl NoncesInternalImpl = NoncesComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC721ConsecutiveEvent: ERC721ConsecutiveComponent::Event,
        #[flat]
        VotesEvent: VotesComponent::Event,
        #[flat]
        NoncesEvent: NoncesComponent::Event,
    }
}


Diagnostics:

====
Warning: The Votes component requires calling `self.votes.transfer_voting_units(...)` from the
token update hooks, and it looks like it is missing.

This may lead to incorrect voting units and checkpoint tracking.
====

AuxData:

None
